[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
sqlite = "0.30.3"
tokio = { version = "1.23.0", features = ["full"] }
maud = { version = "0.24.0", features = ["axum"] }
pulldown-cmark = "0.9.2"
base64 = "0.20.0"
