[package]
name = "blog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = ["full"] }
maud = { version = "0.24.0", features = ["axum"] }
pulldown-cmark = "0.9.2"
base64 = "0.20.0"
urlencoding = "2.1.2"
cmark-syntax = "0.4.1"
syntect = "5.0.0"
sqlx = { version = "0.6.2", features = ["mysql", "macros", "runtime-tokio-rustls", "time", "migrate"] }
dotenv = "0.15.0"
axum-auth = "0.4.0"

[build-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["mysql", "macros", "runtime-tokio-rustls", "time", "migrate"] }
